--- a/src/landing/landing.css
+++ b/src/landing/landing.css
@@ -3,7 +3,12 @@
   position: fixed;
   top: 0;
   padding-inline: 2rem;
+  z-index: 50;
+  background-color: #00000000;
 }
+/* .nav-a:hover {
+  backdrop-filter: blur(2px);
+} */
 .logo-div img {
   width: 6vw;
   z-index: 9;
@@ -11,17 +16,9 @@
   object-fit: cover;
   transition: all 0.5s ease;
 }
-.block {
-  width: 17vw;
-  height: 10vh;
-  position: absolute;
-  left: -7%;
-  background-color: #171717;
-  z-index: 7;
-}
 .logo-div {
   transition: all 0.7s ease;
-  background-color: #171717;
+  background-color: #00000000;
 }
 .logo-div:hover {
   color: white;
@@ -33,7 +30,7 @@
 .logo-div h2 {
   position: absolute;
   width: max-content;
-  left: -15%;
+  left: -12%;
   color: #171717;
   transition: all 1s ease;
   z-index: 2;
@@ -80,11 +77,6 @@
   z-index: -1;
 }
 .main {
-  background-image: url("../assets/images/NELSON_dark.png");
-  height: 100vh;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: right;
   height: 100vh;
 }
 .g-1 {
@@ -138,7 +130,7 @@
   border-radius: 50%;
   position: fixed;
   mix-blend-mode: difference;
-  z-index: 99;
+  z-index: 101;
   pointer-events: none;
   transform: translate(-50%, -50%);
   transition: all 0.15s ease;
@@ -151,7 +143,7 @@
   border-radius: 50%;
   position: fixed;
   mix-blend-mode: difference;
-  z-index: 99;
+  z-index: 101;
   pointer-events: none;
   transform: translate(-30%, -40%);
   transition: all 0.3s ease-out;
@@ -166,7 +158,7 @@
   font-size: 3vh;
 }
 .menu {
-  padding-block: 1.5rem;
+  padding-block: 1.22rem;
   width: 150px;
   height: 10vh;
   display: inline-flex;
@@ -180,6 +172,14 @@
 }
 .menu:hover .white-nav {
   background-color: white;
+}
+.h-fill {
+  height: 130vh;
+  background-image: url("../assets/images/NELSON_dark.png");
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 .btn-holder {
   width: 100%;
