--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,48 @@
 
 .App {
   width: 100%;
-  background-color: #171717;
-  display: block;
-  height: fit-content;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+.data {
+  position: absolute;
+  bottom: 0;
+  left:0;
+  width: 100%;
+  color: #fff;
+  text-transform: uppercase;
+  font-family:"Barlow Condensed", sans-serif;
+  font-size: 1.5em;
+  font-weight: bold;
+  z-index: 9;
+}
+.data-container {
+  width: 50%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.image {
+  position: relative;
+  width: 100%;
+  height:100%;
+  object-fit: contain;
+}
+.card {
+  position: relative;
+  justify-self: center;
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: center;
+  background-color: #949494;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
