--- a/src/crud.css
+++ b/src/crud.css
@@ -68,13 +68,13 @@
 }
 
 .home-section {
-  width: 100vw;
-  max-width: 100%;
+  width: 100%;
   position: relative;
   height: fit-content;
 }
 
 .home-navbar {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,6 +140,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.main_sect {
+  width: 100%;
 }
 
 .recipe-form-wrapper {
@@ -223,6 +226,9 @@ small {
   grid-template-columns: 3fr 1fr;
   gap: 1em;
 }
+.ing {
+  width: 100%;
+}
 .ingredients button {
   background-color: rgb(0, 183, 255);
   color: var(--primary-dark-blue);
@@ -232,16 +238,17 @@ small {
 .ingredients-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(70px, 120px));
-  gap: 0.5em;
+  grid-gap: 0.5em;
 }
 .ingredient-item {
   background-color: var(--primary-grey);
   color: var(--primary-dark-blue);
-  padding: 0.5em 1em;
-  border-radius: 10px;
-  width: 100%;
+  padding: 0.25em 0.5em;
+  width: 85%;
   display: flex;
+  justify-content: space-between;
   gap: 0.75em;
+  text-transform: capitalize;
 }
 .ingredient-item button {
   background-color: transparent;
