--- a/src/pages/components/components.css
+++ b/src/pages/components/components.css
@@ -13,10 +13,12 @@
 .content-header {
   max-width: 100%;
   width: 100%;
-  padding-block: 1em;
+  padding-block: 0.5em;
   position: relative;
   text-align: start;
   text-transform: uppercase;
+  display: grid;
+  grid-template-columns: 1fr 8fr;
 }
 .content-header h2 {
   margin: 0;
@@ -25,7 +27,8 @@
   content: "";
   position: absolute;
   width: 50%;
-  height: 2px;
+  height: 1px;
+  bottom: 0;
   background-color: var(--primary-dark-blue);
 }
 
@@ -61,13 +64,148 @@
   margin: 0;
   padding: 0;
 }
+.content-procedure {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 10fr;
+  gap: 1em;
+  justify-content: start;
+}
+.content-procedure ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.content-procedure li {
+  font-size: 0.85em;
+  width: 100%;
+}
+.actions {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: flex-end;
+  gap: 1em;
+  color: var(--primary-golden);
+}
+.actions i {
+  font-size: 1.5em;
+}
 .content-owner {
   width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: start;
+  text-align: baseline;
   text-transform: capitalize;
   right: 5%;
 }
 .content-owner p {
   padding-inline-end: 2em;
+}
+.pre-text {
+  text-transform: capitalize;
+  color: var(--primary-grey-dark);
+  font-size: 1em;
+  text-align: start;
+  display: flex;
+  align-items: baseline;
+}
+.content-ing-list {
+  display: grid;
+  grid-template-columns: 1fr 11fr;
+}
+.actions {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: flex-end;
+  gap: 1em;
+  color: var(--primary-golden);
+  padding-inline-end:3em;
+  
+}
+.actions i {
+  font-size: 1.5em;
+}
+@media only screen and (max-width: 729px) {
+  .content-card {
+    width: 80%;
+    padding: 5%;
+    justify-self: center;
+  }
+  .content-header {
+    padding: 0;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  .content-header h2 {
+    font-size: 1.2em;
+    display: flex;
+    align-items: center;
+  }
+  .pre-text {
+    text-transform: capitalize;
+    color: var(--primary-grey-dark);
+    font-size: 0.75em;
+    text-align: start;
+    display: flex;
+    align-items: baseline;
+  }
+  .content-header::after {
+    width: 80%;
+  }
+  .content-owner {
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    text-align: baseline;
+    text-transform: capitalize;
+    right: 5%;
+    align-items: center;
+  }
+  .content-ing-list {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+  }
+  .content-owner p {
+    padding-inline-end: 1em;
+  }
+  .content-ingredients {
+    grid-template-columns: repeat(auto-fit, minmax(70px, 90px));
+  }
+  .content-ingredients span {
+    padding: 0.3em 0.5em;
+    font-size: 0.75em;
+  }
+  hr {
+    width: 100%;
+  }
+  .content-procedure {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    gap: 1em;
+    justify-content: start;
+  }
+  .content-procedure ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .content-procedure li {
+    font-size: 0.85em;
+    width: 100%;
+  }
+  .actions {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: flex-end;
+    gap: 1em;
+    color: var(--primary-golden);
+  }
+  .actions i {
+    font-size: 1.5em;
+  }
 }
